First commit for my GitHub Branch

--- a/drivers/gpu/drm/imagination/Kconfig
+++ b/drivers/gpu/drm/imagination/Kconfig
@@ -13,6 +13,6 @@ config DRM_POWERVR
 	select FW_LOADER
 	help
 	  Choose this option if you have a system that has an Imagination
-	  Technologies PowerVR (Series 6 or later) or IMG GPU.
+	  Technologies PowerVR (Series 6 or later) or Imagination GPU. 
 
 	  If "M" is selected, the module will be called powervr.
